# resnet-ncnn-pnnx-opencv-cpp

./: CMakeLists.txt  README.md  ResNet-50-model-sim.param  clean.py  convertmodel.py  infer.py  main.cpp  resnet50.ncnn.param  resnet50_ncnn.py  resnet50_pnnx.py
